# TOGE

./: .gitignore  README.md  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  pull_request_template.md
.github/workflows/: compile-cross-platform.yml  meson-build.yml  super-linter.yml
include/: debug.hpp  meson.build  toge.hpp
src/: debug.cpp  meson.build  toge.cpp
test/: debug-test.cpp  meson.build
